src/solver/maplesat/bindings.rs

/* automatically generated by rust-bindgen 0.59.2 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct maplesat_solver_t {
    _unused: [u8; 0],
}
pub type maplesat_solver = maplesat_solver_t;
pub type maplesat_bool = ::std::os::raw::c_int;
pub type maplesat_lbool = ::std::os::raw::c_int;
pub type maplesat_var = ::std::os::raw::c_int;
pub type maplesat_lit = ::std::os::raw::c_int;
pub const maplesat_ltrue: maplesat_lbool = 1;
pub const maplesat_lfalse: maplesat_lbool = 0;
pub const maplesat_lundef: maplesat_lbool = -1;
extern "C" {
    pub fn maplesat_new() -> *mut maplesat_solver;
}
extern "C" {
    pub fn maplesat_delete(s: *mut maplesat_solver);
}
extern "C" {
    pub fn maplesat_add_clause_begin(s: *mut maplesat_solver);
}
extern "C" {
    pub fn maplesat_add_clause_add_lit(s: *mut maplesat_solver, p: maplesat_lit);
}
extern "C" {
    pub fn maplesat_add_clause_commit(s: *mut maplesat_solver) -> maplesat_bool;
}
extern "C" {
    pub fn maplesat_new_lit(s: *mut maplesat_solver) -> maplesat_lit;
}
extern "C" {
    pub fn maplesat_make_lit(x: maplesat_var) -> maplesat_lit;
}
extern "C" {
    pub fn maplesat_negate_lit(p: maplesat_lit) -> maplesat_lit;
}
extern "C" {
    pub fn maplesat_lit_to_var(p: maplesat_lit) -> maplesat_var;
}
extern "C" {
    pub fn maplesat_solve(s: *mut maplesat_solver) -> maplesat_bool;
}
extern "C" {
    pub fn maplesat_model_value_var(s: *mut maplesat_solver, x: maplesat_var) -> maplesat_lbool;
}
